--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,17 @@
   "license": "MIT",
   "require": {
     "php": ">=7.1.3",
+    "ext-json": "*",
     "hail/arrays": "^0.8.0",
-    "hail/optimize": "^0.9.0",
-    "hail/serializer": "^0.8.0"
+    "hail/optimize": "^0.9.0"
+  },
+  "require-dev": {
+    "symfony/yaml": "^5.1",
+    "yosymfony/toml": "^1.0"
+  },
+  "suggest": {
+    "ext-yaml": "Support YAML parse",
+    "symfony/yaml": "Support YAML parse",
+    "yosymfony/toml": "Support TOML parse"
   }
 }
