--- a/composer.json
+++ b/composer.json
@@ -21,16 +21,16 @@
   },
   "license": "MIT",
   "require": {
-    "php": ">=7.1.3",
-    "ext-json": "*",
-    "hail/arrays": "^0.8.0",
-    "hail/optimize": "^0.9.0"
+    "php": ">=8.0.0",
+    "hail/arrays": "^0.9.3",
+    "hail/optimize": "^0.10.0"
   },
   "require-dev": {
-    "symfony/yaml": "^5.1",
-    "yosymfony/toml": "^1.0"
+    "symfony/yaml": "^5.3.6",
+    "yosymfony/toml": "^1.0.4"
   },
   "suggest": {
+    "ext-json": "Support JSON parse",
     "ext-yaml": "Support YAML parse",
     "symfony/yaml": "Support YAML parse",
     "yosymfony/toml": "Support TOML parse"
